# transformer-reasoning

./: .gitignore  README.md  cmd_args.md  download_from_huggingface.py  evaluate_capacity_average.sh  experiment_plans.md  generate_bio_data.ipynb  infinite_dataset_testing.ipynb  installed_versions.txt  interactive_analysis.ipynb  loss_histograms.ipynb  playground.ipynb  pyproject.toml  research_notes.md  run_test.py  run_training_BYU.sh  train_llama.py  transformer_knowledge_capacity.md  two_hop_optimization.ipynb
experiment_specs/: 1_hop_scaling.yaml  2_hop_derivatives.yaml  2_hop_scaling_fast.yaml  2_hop_scaling_recompute.yaml
generate_dataset/: generate_bios.py  generate_profiles.py  generate_templates.py
generated_data/templates/: best_friend-templates.txt  birth_city-templates.txt  birth_date-templates.txt  child-templates.txt  employer-templates.txt  name-templates.txt  parent-templates.txt  university-templates.txt  worst_enemy-templates.txt
icml_draft/: icml_draft.tex  references.bib
src/transformer_reasoning/: utils.py
src/transformer_reasoning/evaluation/: bio_evaluation.py  compare_convergence_rates.py  detailed_generalization_eval.py  eval_utils.py  loss_over_time.py  measure_capacity.py  measure_entropy.py  plot_capacity.py  qa_evaluation.py  run_from_spec.py  spec_config.py
src/transformer_reasoning/generate_dataset/: generate_bios.py  generate_profiles.py  generate_qa_dataset.py  generate_templates.py
src/transformer_reasoning/models/: llama_mup.py  llama_mup_config.py
src/transformer_reasoning/tests/: test_dataset_integrity.py  test_loss_eval.py  test_model_saving_loading.py  test_torch_jax_equiv.py  test_training.py
src/transformer_reasoning/train/: dataset.py  fill_trained_model.py  train_llama.py  (+7 more)
